gitops/workloads/raw/hdfs/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hdfs
  namespace: hdfs
spec:
  parentRefs:
    - name: default-gateway
      namespace: gateway-system
      sectionName: https
  hostnames:
    - "hdfs.homelab.xiehang.com"
  rules:
    - backendRefs:
        - name: namenode
          port: 9870
